feat(api): add api to get cost detail
