# apps/api/routers/book.go
@@ -16,4 +16,5 @@ func BookRegister(router *gin.RouterGroup) {
 	// cost
 	router.POST("/book/cost", controllers.CreateNewCost)
 	router.GET("/book/:book_id/cost/list", controllers.GetCostList)
+	router.GET("/book/:book_id/cost/:cost_id", controllers.GetCostDetail)
 }
